[gd_scene load_steps=9 format=3 uid="uid://b0h1xp4g8bkig"]

[ext_resource type="Script" path="res://enemies/eye/eye.gd" id="1_7xeej"]
[ext_resource type="Texture2D" uid="uid://c27wx8i4evymj" path="res://enemies/eye/eye.png" id="2_i68rf"]
[ext_resource type="PackedScene" uid="uid://olyv8q2cl8v7" path="res://characters/hurtbox.tscn" id="3_1kdw8"]

[sub_resource type="Animation" id="Animation_nffvx"]
resource_name = "teleport"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_2d2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0), Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"teleport"
}]
}

[sub_resource type="Animation" id="Animation_vflco"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_2d2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_loy20"]
_data = {
"RESET": SubResource("Animation_vflco"),
"teleport": SubResource("Animation_nffvx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tqf60"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8hll"]
size = Vector2(18, 28)

[node name="eye" type="Area2D"]
collision_layer = 0
script = ExtResource("1_7xeej")
shots_before_teleport = 3

[node name="sprite_2d2" type="Sprite2D" parent="."]
texture = ExtResource("2_i68rf")

[node name="shot_cooldown" type="Timer" parent="."]
one_shot = true

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_loy20")
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tqf60")

[node name="hurtbox" parent="." instance=ExtResource("3_1kdw8")]
collision_layer = 16

[node name="collision_shape_2d" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_y8hll")

[connection signal="timeout" from="shot_cooldown" to="." method="_on_shot_cooldown_timeout"]
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="hurt" from="hurtbox" to="." method="_on_hurtbox_hurt"]
